change tab size did not trigger re-render